--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -86,7 +86,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/stock/new_product/">Cadastrar Produto</a>
-              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="/stock/product/">Consultar</a>
              
             </div>
           </li>
